# sentence-transformers

./: .coverage.florians-mbp.home.64680.XDEKdiCx  .gitignore  .markdownlint.json  .mypy.ini  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  NOTICE.txt  README.md  index.rst  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py  testing-sbert-call.py  testing-sbert-clover.py  testing-sbert.py  workspace-sbert.code-workspace
.dvc/: .gitignore
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quality.yml  tests.yml
bao/: utils.py
bao/indexing/: custom_indexes.py  instantiate_indexes.py
bao/post_quant/: embedding_quantization.py
bao/retrieve/: knn.py
docs/: .htaccess  Makefile  conf.py  contact.md  hugging_face.md  index.rst  installation.md  migration_guide.md  pretrained_cross-encoders.md  pretrained_models.md  pretrained_models_performance.rst  pretrained_models_performance_search.html  publications.md  quickstart.md  quickstart.rst  requirements.txt
docs/cross_encoder/: dataset_overview.md  loss_overview.md  pretrained_models.md  training_overview.md
docs/datasets/: TED2020.md
docs/img/: logo.xcf
docs/package_reference/: SentenceTransformer.md  cross_encoder.md  datasets.md  evaluation.md  losses.md  models.md  readers.md  util.md
docs/pretrained-models/: ce-msmarco.md  dpr.md  msmarco-v1.md  msmarco-v2.md  msmarco-v3.md  msmarco-v5.md  multilingual-models.md  nli-models.md  nq-v1.md  sts-models.md  wikipedia-sections-models.md
docs/sentence_transformer/: dataset_overview.md  loss_overview.md  pretrained_models.md  training_overview.md
docs/sparse_encoder/: loss_overview.md  pretrained_models.md  training_overview.md
docs/training/: loss_overview.md  multilingual-models.md  multilingual.rst  overview.md
docs/usage/: computing_sentence_embeddings.md  cross-encoder.md  paraphrase_mining.md  semantic_search.md  semantic_search_elasticsearch.md  semantic_textual_similarity.md
examples/: README.md  application_clustering.py  application_clustering_wikipedia_sections.py  application_semantic_search.py  basic_training_nli.py  evaluation_stsbenchmark.py  evaluation_stsbenchmark_sys.py  high_dim_embeddings.py  multigpu_training.py  training_average_word_embeddings.py  training_multi-task.py  training_multilingual.py  training_nli.py  training_nli_T5.py  training_nli_albert.py  training_nli_all.py  training_nli_bert.py  training_nli_distilbert.py  training_nli_roberta.py  training_nli_transformers.py  training_nli_xlm-roberta.py  training_stsbenchmark.py  training_stsbenchmark_albert.py  training_stsbenchmark_avg_word_embeddings.py  training_stsbenchmark_bert.py  training_stsbenchmark_bilstm.py  training_stsbenchmark_bow.py  training_stsbenchmark_cnn.py  training_stsbenchmark_continue_training.py  training_stsbenchmark_distilbert.py  training_stsbenchmark_roberta.py  training_stsbenchmark_tf-idf_word_embeddings.py  training_stsbenchmark_transformers.py  training_stsbenchmark_xlnet.py  training_wikipedia_sections.py
examples/applications/: README.md  basic_embedding.py  clustering.py  computing_embeddings_mutli_gpu.py  cross-encoder_reranking.py  cross-encoder_usage.py  semantic_search.py  semantic_search_quora_annoy.py  semantic_search_quora_elasticsearch.py  semantic_search_quora_faiss.py  semantic_search_quora_hnswlib.py  semantic_search_quora_pytorch.py
examples/datasets/: README.md  get_data.py
examples/domain_adaptation/: README.md
examples/evaluation/: evaluation_inference_speed.py  evaluation_stsbenchmark.py  evaluation_stsbenchmark_quantization.py  evaluation_stsbenchmark_sbert-wk.py  evaluation_translation_matching.py  metrics_benchmark.py
examples/onnx/: onnx_example.ipynb
examples/onnx_inference/: README.md  onnx_inference.ipynb
gradio/: demo.py
james/: msmarco.ipynb
scripts/: pull.sh
sentence_transformers/: LoggingHandler.py  ScoreFunctions.py  SentenceTransformer.py  SentenceTransformer.pyi  SentenceTransformerMultiGPU.py  SimilarityFunction.py  SimilarityFunctions.py  __init__.py  backend.py  config.py  configuration.py  data_collator.py  data_samplers.py  dataset_readers.py  datasets.py  encoder.py  evaluation.py  fit_mixin.py  huggingface.py  input_example.py  losses.py  model_card.py  model_card_template.md  model_card_templates.py  peft_mixin.py  quantization.py  sampler.py  similarity_functions.py  test_batch_hard_triplet_loss.py  trainer.py  training_args.py  util.py
tests/: conftest.py  test_BinaryClassificationEvaluator.py  test_MSESimilarityEvaluator.py  test_backends.py  test_batch_hard_triplet_loss.py  test_cmnrl.py  test_compute_embeddings.py  test_cross_encoder.py  test_ct2_sentence_transformers.py  test_custom_models.py  test_evaluator.py  test_high_dim.py  test_image_embeddings.py  test_mine_hard_negatives.py  test_model_card.py  test_model_card_data.py  test_multi_process.py  test_nanobeir_evaluator.py  test_pretrained_stsb.py  test_sampler.py  test_save_load_optimizer.py  test_sentence_transformer.py  test_sparse_tensor.py  test_train_stsb.py  test_trainer.py  test_training_args.py  test_util.py  test_wkpooling.py  utils.py
(+778 files in other folders)
