[tool.poetry]
name = "sentence-transformers"
version = "0.1.0"
description = ""
authors = ["Justin Boyer <justin@opensyllabus.org>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = ">=3.1.0,<3.4.0"
tqdm = "^4.50.2"
torch = ">=1.2.0"
numpy = "^1.19.2"
scikit-learn = "^0.23.2"
scipy = "^1.5.2"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
