[project]
name = "sentence-transformers"
version = "3.1.0.dev0"
description = "Multilingual text embeddings"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Nils Reimers", email = "info@nils-reimers.de" },
    { name = "Tom Aarsen" },
]
requires-python = ">=3.8"
keywords = [
    "Transformer Networks",
    "BERT",
    "XLNet",
    "sentence embedding",
    "PyTorch",
    "NLP",
    "deep learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.38.0,<5.0.0",
    "tqdm",
    "torch>=1.11.0",
    "numpy<2.0.0",
    "scikit-learn",
    "scipy",
    "huggingface-hub>=0.19.3",
    "Pillow",
]

[project.urls]
Homepage = "https://www.SBERT.net"
Repository = "https://github.com/UKPLab/sentence-transformers/"


[project.optional-dependencies]
train = ["datasets", "accelerate>=0.20.3"]
dev = ["datasets", "accelerate>=0.20.3", "pre-commit", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentence_transformers*"]
namespaces = false

[tool.ruff]
line-length = 119
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Skip `E731` (do not assign a lambda expression, use a def)
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all examples
"examples/**" = ["E402"]

[tool.ruff.lint.isort]
known-third-party = ["datasets"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--strict-markers -m 'not slow'"
markers = [
    "slow: marks tests as slow"
]